--- a/index.html
+++ b/index.html
@@ -13,4 +13,24 @@
   }
   
   
-  
+    .container {
+    text-align:center;
+    font-weight:bold;
+    min-width: 100%;
+    font-size: 750%;
+    padding: 20px 0px 0px 0px;
+    background: 	#FFDF00;
+    color: 	#FFDF00;
+    -webkit-text-stroke-width: 4px;
+    -webkit-text-stroke-color: black;
+    font-family: 'Raleway', sans-serif;
+  }
+</style>
+<body>
+  <div class = 'container'>
+    <img src="190922_Black on Clear.png", width = "20%"/>
+    <br>
+    COMING <br> SOON!
+  </div>
+</body>
+</html>
