--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </style>
 <body>
   <div class = 'container'>
-    <img src="190922_Black on Clear.png", width = "20%"/>
+    <img src="IMG_7127.JPG", width = "20%"/>
     <br>
     COMING <br> SOON!
   </div>
