--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     font-size: 750%;
     padding: 20px 0px 0px 0px;
     background: 	 #900C3F ;
-    color: 	#FFDF00;
+    color: 	 #DAF7A6 ;
     -webkit-text-stroke-width: 4px;
     -webkit-text-stroke-color: black;
     font-family: 'Raleway', sans-serif;
@@ -30,7 +30,7 @@
   <div class = 'container'>
     <img src="IMG_7127.JPG", width = "20%"/>
     <br>
-    COMING <br> SOON!
+    LARA <br> KETONEN
   </div>
 </body>
 </html>
