--- a/index.html
+++ b/index.html
@@ -33,4 +33,11 @@
     LARA <br> KETONEN
   </div>
 </body>
+  
+</style>
+<body>
+  <div class = 'container'>
+    <img src="waves.svg", width = "20%"/>
+  </div>
+</body>
 </html>
