--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     font-size: 750%;
     padding: 20px 0px 0px 0px;
     background: 	 #900C3F ;
-    color: 	 #DAF7A6 ;
+    color: 	 #D8D8D8 ;
     -webkit-text-stroke-width: 4px;
     -webkit-text-stroke-color: black;
     font-family: 'Raleway', sans-serif;
