--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <style>
   * {
-    background:   #FFC300  ;
+    background:   #B6B6B6  ;
   }
   
   
@@ -19,7 +19,7 @@
     min-width: 100%;
     font-size: 750%;
     padding: 20px 0px 0px 0px;
-    background: 	 #900C3F ;
+    background: 	 #7F7F7F ;
     color: 	 #D8D8D8 ;
     -webkit-text-stroke-width: 4px;
     -webkit-text-stroke-color: black;
