--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class = 'container'>
     <img src="IMG_7127.JPG", width = "20%"/>
     <br>
-    LARA <br> KETONEN
+    Pump Maintenance Help
   </div>
 </body>
   
