--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </style>
 <body>
   <div class = 'container'>
-    <img src="IMG_7127.JPG", width = "20%"/>
+    <img src="water.png", width = "100%"/>
     <br>
     Pump Maintenance Help
   </div>
