--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 </style>
 <body>
   <div class = 'container'>
-    <img src="water3.png", width = "100%"/>
+    <img src="water3_cropped.png", width = "100%"/>
     <br>
     Pump Maintenance Help
   </div>
 </body>
+  
   
 </style>
 <body>
