--- a/index.html
+++ b/index.html
@@ -9,20 +9,28 @@
 </head>
 <style>
   * {
-    background:   #B6B6B6  ;
+    background:   #FFFFFF  ;
   }
   
   
     .container {
     text-align:center;
     font-weight:bold;
-    min-width: 100%;
+    min-width: 35%;
     font-size: 500%;
     padding: 40px 0px 0px 0px;
     background: 	 #7F7F7F ;
     color: 	 #D8D8D8 ;
     font-family: 'Raleway', sans-serif;
   }
+  
+  .side {
+
+    background: 	 ##1A1A1A ;
+    width: 666px;
+    height: 1080px;
+  }
+  
 </style>
 <body>
   <div class = 'container'>
@@ -32,9 +40,10 @@
   </div>
 </body>
   
-  
-</style>
+  </style>
 <body>
-    <img src="pump.png", width = "25%"/>
+  <div class = 'side'>
+  </div>
 </body>
+
 </html>
