--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     min-width: 35%;
     font-size: 500%;
     padding: 40px 0px 0px 0px;
-    background: 	 #7F7F7F ;
+    background: #7F7F7F ;
     color: 	 #D8D8D8 ;
     font-family: 'Raleway', sans-serif;
   }
@@ -29,6 +29,7 @@
     background: #1A1A1A ;
     width: 666px;
     height: 1080px;
+    padding: 40px 0px 0px 0px;
   }
   
 </style>
@@ -36,7 +37,7 @@
   <div class = 'container'>
     <img src="water3_cropped.png", width = "100%"/>
     <br>
-    Pump Maintenance Help
+    VARTY
   </div>
 </body>
   
