--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     background: #1A1A1A ;
     width: 666px;
     height: 1080px;
-    padding: 0px 0px 1254px 0px;
+    left: 5px;
   }
   
 </style>
