--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     background: #1A1A1A ;
     width: 666px;
     height: 1080px;
-    left: 5px;
-    float: left;
+    position: absolute;
+    right: 0px;
   }
   
 </style>
