--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
   </style>
 <body>
   <div class = 'container'>
-    <img src="water3_cropped.png", width = "65%"/>
+    position: absolute;
+    left: 0px;
+    <img src="VARTY.png", width = "65%"/>
     <br>
     VARTY
   </div>
