--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </style>
 <body>
   <div class = 'container'>
-    <img src="VARTY.png", width = "68%"/>
+    <img src="VARTY.png", height = "100%"/>
   </div>
 </body>
   
