--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
   }
   
 
+    .demo {
+    position: absolute;
+    right: 60px;
+
+  }
+  
+  
   
   </style>
 <body>
@@ -42,5 +49,13 @@
     <img src="VARTY.png", height = "75%"/>
   </div>
 </body>
+
+  </style>
+<body>
+  <div class = 'demo'>
+    <img src="animated 5.gif", height = "30%"/>
+  </div>
+</body>
+
   
 </html>
