--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     .demo {
     position: absolute;
     right: 60px;
+    top: 120px;
 
   }
   
@@ -53,7 +54,7 @@
   </style>
 <body>
   <div class = 'demo'>
-    <img src="animated 5.gif", height = "30%"/>
+    <img src="animated 5.gif", height = "100%"/>
   </div>
 </body>
 
