--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </style>
 <body>
   <div class = 'demo'>
-    <img src="animated 5.gif", height = "100%"/>
+    <img src="animated 5.GIF">
   </div>
 </body>
 
