--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </style>
 <body>
   <div class = 'demo'>
-    <img src="animated 5.GIF">
+    <img src="animated 5.GIF", height = "60%"/>
   </div>
 </body>
 
