--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     right: 0px;
     text-align:right;
     background: #1A1A1A ;
-    width: 666px;
-    height: 1080px;
+    width: 35%;
+    height: 100%;
 
   }
   
