--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </style>
 <body>
   <div class = 'container'>
-    <img src="VARTY.png", height = "75%"/>
+    <img src="VARTY.png">
   </div>
 </body>
 
