--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     .container {
     position: absolute;
     left: 0px;
-    height: 100%;
   }
   
   .side {
@@ -44,7 +43,7 @@
   </style>
 <body>
   <div class = 'container'>
-    <img src="VARTY.png">
+    <img src="VARTY.png", height = "100%"/>
   </div>
 </body>
 
