--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </style>
 <body>
   <div class = 'container'>
-    <img src="VARTY.png", height = "100%"/>
+    <img src="VARTY.png", widht = "65%"/>
   </div>
 </body>
 
