--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     .container {
     position: absolute;
     left: 0px;
-    widht: 65%;
+    max-widht: 65%;
+    max-height: 65%
   }
   
   .side {
@@ -44,7 +45,7 @@
   </style>
 <body>
   <div class = 'container'>
-    <img src="VARTY.png", widht = "65%"/>
+    <img src="VARTY.png">
   </div>
 </body>
 
