--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     right: 0px;
     text-align:right;
     background: #1A1A1A ;
-    width: 35%;
+    width: 100%;
     height: 100%;
 
   }
@@ -33,9 +33,7 @@
 
     .demo {
     position: absolute;
-    right: 100px;
-    top: 120px;
-    height: 80px;
+    width: 70%;
 
   }
   
@@ -46,7 +44,7 @@
   </style>
 <body>
   <div class = 'container'>
-    <img src="VARTY.png">
+    <img src="animated 7.GIF">
   </div>
 </body>
 
@@ -59,7 +57,7 @@
   </style>
 <body>
   <div class = 'demo'>
-    <img src="animated 5.GIF", height = "60%"/>
+    <img src="Asset 1.svg", height = "60%"/>
   </div>
 </body>
 
