--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </style>
 <body>
   <div class = 'demo'>
-    <img src="Asset 1.svg", height = "60%"/>
+    <img src="clubbb.png", height = "60%"/>
   </div>
 </body>
 
