--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <title>random</title>
 </head>
 <style>
-  * {
-    background:   #FFFFFF  ;
-  }
+
   
   
     .container {
@@ -61,7 +59,7 @@
   </style>
 <body>
   <div class = 'demo'>
-    <img src="clubbb.png", height = "60%"/>
+    <img src="Asset 1.svg", height = "60%"/>
   </div>
 </body>
 
