--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     .container {
     position: absolute;
     left: 0px;
-    max-widht: 30%;
-    max-height: 30%
+    max-widht: 60%;
   }
   
   .side {
@@ -59,7 +58,7 @@
   </style>
 <body>
   <div class = 'demo'>
-    <img src="Asset 1.svg", height = "60%"/>
+    <img src="real clubbb.svg ", height = "60%"/>
   </div>
 </body>
 
