--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </style>
 <body>
   <div class = 'demo'>
-    <img src="real clubbb.svg ", height = "60%"/>
+    <img src="real clubbb.svg ">
   </div>
 </body>
 
