--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   }
   
   
-  
 
 
 
@@ -59,6 +58,14 @@
 <body>
   <div class = 'demo'>
     <img src="real clubbb.svg ">
+  </div>
+</body>
+
+  </style>
+<body>
+  <div class = 'demo'>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#479691" fill-opacity="1" d="M0,224L80,192C160,160,320,96,480,96C640,96,800,160,960,176C1120,192,1280,160,1360,144L1440,128L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
+
   </div>
 </body>
 
