--- a/index.html
+++ b/index.html
@@ -64,19 +64,9 @@
   </style>
 <body>
   <div class = 'demo'>
-   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#479691" fill-opacity="1" d="
-M0,224
- L80,192 
-C160,160,320,96,480,96
-C640,96,800,160,960,176
-C1120,192,1280,160,1360,144
-L1440,328
-L1440,0
-L1360,0
-C1280,0,1120,0,960,0
-C800,0,640,0,480,0
-C320,0,160,0,80,0
-L0,0Z"></path></svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 320">
+  <path fill="#0099ff" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,192C384,171,480,117,576,96C672,75,768,85,864,101.3C960,117,1056,139,1152,144C1248,149,1344,139,1392,133.3L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+</svg>
 
   </div>
 </body>
