--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
   </style>
 <body>
   <div class = 'demo'>
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 320">
-  <path fill="#0099ff" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,192C384,171,480,117,576,96C672,75,768,85,864,101.3C960,117,1056,139,1152,144C1248,149,1344,139,1392,133.3L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
-</svg>
+    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 5708.45 2977.05"><defs><style>.cls-1{fill:none;stroke:red;stroke-width:13px;}</style></defs><path id="Path_1369" data-name="Path 1369" class="cls-1" d="M-1702.88-3551.29H2484.78L3136.9-1614.74H2605v418.32H3090.3l164.47,609.18H2234.47v-1027.5H1478.33v418.32h537.89l69.43,609.18H1116.31v-1027.5H604.91v472h289l51.37,555.5H-162.41l37-555.5H206.18v-472H-297.35v1027.5H-1297.88l44.45-640.9h563.71v-386.6h-801v1027.5h-946.34l144-640.9h425.58v-386.6h-506.65Z" transform="translate(2445.19 3557.79)"/></svg>
 
   </div>
 </body>
